[gd_scene load_steps=5 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Mate.tscn" type="PackedScene" id=3]
[ext_resource path="res://Barricade.tscn" type="PackedScene" id=4]

[node name="Main" type="Node"]
script = ExtResource( 1 )
mate_scene = ExtResource( 3 )
barricade_scene = ExtResource( 4 )

[node name="PlayerStuff" type="Node" parent="."]

[node name="Player" parent="PlayerStuff" instance=ExtResource( 2 )]

[node name="StartPosition" type="Position2D" parent="PlayerStuff"]
position = Vector2( 200, 550 )

[node name="MateStuff" type="Node" parent="."]

[node name="FirstStartPosition" type="Position2D" parent="MateStuff"]
position = Vector2( 100, 400 )

[node name="SecondStartPosition" type="Position2D" parent="MateStuff"]
position = Vector2( 300, 400 )

[node name="ThirdStartPosition" type="Position2D" parent="MateStuff"]
position = Vector2( 200, 350 )

[node name="BarricadeStuff" type="Node" parent="."]

[node name="BarricadeOne" parent="BarricadeStuff" instance=ExtResource( 4 )]
position = Vector2( 100, 365 )
scale = Vector2( 2, 2 )

[node name="BarricadeTwo" parent="BarricadeStuff" instance=ExtResource( 4 )]
position = Vector2( 300, 365 )
scale = Vector2( 2, 2 )

[node name="BarricadeThree" parent="BarricadeStuff" instance=ExtResource( 4 )]
position = Vector2( 200, 315 )
scale = Vector2( 2, 2 )
